add_executable(py_freeze_module)
py_set_output_name(py_freeze_module _freeze_module)
target_link_libraries(py_freeze_module PRIVATE py_default_static_options)
target_compile_definitions(py_freeze_module PRIVATE Py_BUILD_CORE Py_NO_ENABLE_SHARED _CONSOLE _UNICODE UNICODE)
set_property(SOURCE "${CPython_SOURCE_DIR}/Python/sysmodule.c" APPEND PROPERTY COMPILE_DEFINITIONS [[VPATH="..\\.."]])
target_sources(py_freeze_module PRIVATE
  "${CPython_SOURCE_DIR}/Programs/_freeze_module.c"
  "${CPython_SOURCE_DIR}/PC/config_minimal.c"
  "${CPython_SOURCE_DIR}/Modules/atexitmodule.c"
  "${CPython_SOURCE_DIR}/Modules/faulthandler.c"
  "${CPython_SOURCE_DIR}/Modules/gcmodule.c"
  "${CPython_SOURCE_DIR}/Modules/getbuildinfo.c"
  "${CPython_SOURCE_DIR}/Modules/getpath_noop.c"
  "${CPython_SOURCE_DIR}/Modules/posixmodule.c"
  "${CPython_SOURCE_DIR}/Modules/signalmodule.c"
  "${CPython_SOURCE_DIR}/Modules/timemodule.c"
  "${CPython_SOURCE_DIR}/Modules/_tracemalloc.c"
  "${CPython_SOURCE_DIR}/Modules/_io/_iomodule.c"
  "${CPython_SOURCE_DIR}/Modules/_io/bufferedio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/bytesio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/fileio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/iobase.c"
  "${CPython_SOURCE_DIR}/Modules/_io/stringio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/textio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/winconsoleio.c"
  "${CPython_SOURCE_DIR}/Objects/abstract.c"
  "${CPython_SOURCE_DIR}/Objects/boolobject.c"
  "${CPython_SOURCE_DIR}/Objects/bytearrayobject.c"
  "${CPython_SOURCE_DIR}/Objects/bytes_methods.c"
  "${CPython_SOURCE_DIR}/Objects/bytesobject.c"
  "${CPython_SOURCE_DIR}/Objects/call.c"
  "${CPython_SOURCE_DIR}/Objects/capsule.c"
  "${CPython_SOURCE_DIR}/Objects/cellobject.c"
  "${CPython_SOURCE_DIR}/Objects/classobject.c"
  "${CPython_SOURCE_DIR}/Objects/codeobject.c"
  "${CPython_SOURCE_DIR}/Objects/complexobject.c"
  "${CPython_SOURCE_DIR}/Objects/descrobject.c"
  "${CPython_SOURCE_DIR}/Objects/dictobject.c"
  "${CPython_SOURCE_DIR}/Objects/enumobject.c"
  "${CPython_SOURCE_DIR}/Objects/exceptions.c"
  "${CPython_SOURCE_DIR}/Objects/fileobject.c"
  "${CPython_SOURCE_DIR}/Objects/floatobject.c"
  "${CPython_SOURCE_DIR}/Objects/frameobject.c"
  "${CPython_SOURCE_DIR}/Objects/funcobject.c"
  "${CPython_SOURCE_DIR}/Objects/genericaliasobject.c"
  "${CPython_SOURCE_DIR}/Objects/genobject.c"
  "${CPython_SOURCE_DIR}/Objects/interpreteridobject.c"
  "${CPython_SOURCE_DIR}/Objects/iterobject.c"
  "${CPython_SOURCE_DIR}/Objects/listobject.c"
  "${CPython_SOURCE_DIR}/Objects/longobject.c"
  "${CPython_SOURCE_DIR}/Objects/memoryobject.c"
  "${CPython_SOURCE_DIR}/Objects/methodobject.c"
  "${CPython_SOURCE_DIR}/Objects/moduleobject.c"
  "${CPython_SOURCE_DIR}/Objects/namespaceobject.c"
  "${CPython_SOURCE_DIR}/Objects/object.c"
  "${CPython_SOURCE_DIR}/Objects/obmalloc.c"
  "${CPython_SOURCE_DIR}/Objects/odictobject.c"
  "${CPython_SOURCE_DIR}/Objects/picklebufobject.c"
  "${CPython_SOURCE_DIR}/Objects/rangeobject.c"
  "${CPython_SOURCE_DIR}/Objects/setobject.c"
  "${CPython_SOURCE_DIR}/Objects/sliceobject.c"
  "${CPython_SOURCE_DIR}/Objects/structseq.c"
  "${CPython_SOURCE_DIR}/Objects/tupleobject.c"
  "${CPython_SOURCE_DIR}/Objects/typeobject.c"
  "${CPython_SOURCE_DIR}/Objects/typevarobject.c"
  "${CPython_SOURCE_DIR}/Objects/unicodectype.c"
  "${CPython_SOURCE_DIR}/Objects/unicodeobject.c"
  "${CPython_SOURCE_DIR}/Objects/unionobject.c"
  "${CPython_SOURCE_DIR}/Objects/weakrefobject.c"
  "${CPython_SOURCE_DIR}/Parser/myreadline.c"
  "${CPython_SOURCE_DIR}/Parser/parser.c"
  "${CPython_SOURCE_DIR}/Parser/peg_api.c"
  "${CPython_SOURCE_DIR}/Parser/pegen.c"
  "${CPython_SOURCE_DIR}/Parser/pegen_errors.c"
  "${CPython_SOURCE_DIR}/Parser/action_helpers.c"
  "${CPython_SOURCE_DIR}/Parser/string_parser.c"
  "${CPython_SOURCE_DIR}/Parser/token.c"
  "${CPython_SOURCE_DIR}/Parser/tokenizer.c"
  "${CPython_SOURCE_DIR}/PC/invalid_parameter_handler.c"
  "${CPython_SOURCE_DIR}/PC/msvcrtmodule.c"
  "${CPython_SOURCE_DIR}/PC/winreg.c"
  "${CPython_SOURCE_DIR}/Python/_warnings.c"
  "${CPython_SOURCE_DIR}/Python/asdl.c"
  "${CPython_SOURCE_DIR}/Python/assemble.c"
  "${CPython_SOURCE_DIR}/Python/ast.c"
  "${CPython_SOURCE_DIR}/Python/ast_opt.c"
  "${CPython_SOURCE_DIR}/Python/ast_unparse.c"
  "${CPython_SOURCE_DIR}/Python/bltinmodule.c"
  "${CPython_SOURCE_DIR}/Python/bootstrap_hash.c"
  "${CPython_SOURCE_DIR}/Python/ceval.c"
  "${CPython_SOURCE_DIR}/Python/codecs.c"
  "${CPython_SOURCE_DIR}/Python/compile.c"
  "${CPython_SOURCE_DIR}/Python/context.c"
  "${CPython_SOURCE_DIR}/Python/dtoa.c"
  "${CPython_SOURCE_DIR}/Python/dynamic_annotations.c"
  "${CPython_SOURCE_DIR}/Python/dynload_win.c"
  "${CPython_SOURCE_DIR}/Python/errors.c"
  "${CPython_SOURCE_DIR}/Python/fileutils.c"
  "${CPython_SOURCE_DIR}/Python/flowgraph.c"
  "${CPython_SOURCE_DIR}/Python/formatter_unicode.c"
  "${CPython_SOURCE_DIR}/Python/frame.c"
  "${CPython_SOURCE_DIR}/Python/future.c"
  "${CPython_SOURCE_DIR}/Python/getargs.c"
  "${CPython_SOURCE_DIR}/Python/getcompiler.c"
  "${CPython_SOURCE_DIR}/Python/getcopyright.c"
  "${CPython_SOURCE_DIR}/Python/getopt.c"
  "${CPython_SOURCE_DIR}/Python/getplatform.c"
  "${CPython_SOURCE_DIR}/Python/getversion.c"
  "${CPython_SOURCE_DIR}/Python/ceval_gil.c"
  "${CPython_SOURCE_DIR}/Python/hamt.c"
  "${CPython_SOURCE_DIR}/Python/hashtable.c"
  "${CPython_SOURCE_DIR}/Python/import.c"
  "${CPython_SOURCE_DIR}/Python/importdl.c"
  "${CPython_SOURCE_DIR}/Python/initconfig.c"
  "${CPython_SOURCE_DIR}/Python/intrinsics.c"
  "${CPython_SOURCE_DIR}/Python/instrumentation.c"
  "${CPython_SOURCE_DIR}/Python/legacy_tracing.c"
  "${CPython_SOURCE_DIR}/Python/marshal.c"
  "${CPython_SOURCE_DIR}/Python/modsupport.c"
  "${CPython_SOURCE_DIR}/Python/mysnprintf.c"
  "${CPython_SOURCE_DIR}/Python/mystrtoul.c"
  "${CPython_SOURCE_DIR}/Python/optimizer.c"
  "${CPython_SOURCE_DIR}/Python/pathconfig.c"
  "${CPython_SOURCE_DIR}/Python/perf_trampoline.c"
  "${CPython_SOURCE_DIR}/Python/preconfig.c"
  "${CPython_SOURCE_DIR}/Python/pyarena.c"
  "${CPython_SOURCE_DIR}/Python/pyctype.c"
  "${CPython_SOURCE_DIR}/Python/pyfpe.c"
  "${CPython_SOURCE_DIR}/Python/pyhash.c"
  "${CPython_SOURCE_DIR}/Python/pylifecycle.c"
  "${CPython_SOURCE_DIR}/Python/pymath.c"
  "${CPython_SOURCE_DIR}/Python/pystate.c"
  "${CPython_SOURCE_DIR}/Python/pystrcmp.c"
  "${CPython_SOURCE_DIR}/Python/pystrhex.c"
  "${CPython_SOURCE_DIR}/Python/pystrtod.c"
  "${CPython_SOURCE_DIR}/Python/Python-ast.c"
  "${CPython_SOURCE_DIR}/Python/pythonrun.c"
  "${CPython_SOURCE_DIR}/Python/Python-tokenize.c"
  "${CPython_SOURCE_DIR}/Python/pytime.c"
  "${CPython_SOURCE_DIR}/Python/specialize.c"
  "${CPython_SOURCE_DIR}/Python/structmember.c"
  "${CPython_SOURCE_DIR}/Python/suggestions.c"
  "${CPython_SOURCE_DIR}/Python/symtable.c"
  "${CPython_SOURCE_DIR}/Python/sysmodule.c"
  "${CPython_SOURCE_DIR}/Python/thread.c"
  "${CPython_SOURCE_DIR}/Python/traceback.c"
  "${CPython_SOURCE_DIR}/Python/tracemalloc.c")

function(freeze_module module_name module_file)
  add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/${module_name}.h" COMMAND py_freeze_module "${module_name}" "${module_file}" "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/${module_name}.h" DEPENDS "${module_file}")
endfunction()

freeze_module("importlib._bootstrap" "${CPython_SOURCE_DIR}/Lib/importlib/_bootstrap.py")
freeze_module("importlib._bootstrap_external" "${CPython_SOURCE_DIR}/Lib/importlib/_bootstrap_external.py")
freeze_module("zipimport" "${CPython_SOURCE_DIR}/Lib/zipimport.py")
freeze_module("abc" "${CPython_SOURCE_DIR}/Lib/abc.py")
freeze_module("codecs" "${CPython_SOURCE_DIR}/Lib/codecs.py")
freeze_module("io" "${CPython_SOURCE_DIR}/Lib/io.py")
freeze_module("_collections_abc" "${CPython_SOURCE_DIR}/Lib/_collections_abc.py")
freeze_module("_sitebuiltins" "${CPython_SOURCE_DIR}/Lib/_sitebuiltins.py")
freeze_module("genericpath" "${CPython_SOURCE_DIR}/Lib/genericpath.py")
freeze_module("ntpath" "${CPython_SOURCE_DIR}/Lib/ntpath.py")
freeze_module("posixpath" "${CPython_SOURCE_DIR}/Lib/posixpath.py")
freeze_module("os" "${CPython_SOURCE_DIR}/Lib/os.py")
freeze_module("site" "${CPython_SOURCE_DIR}/Lib/site.py")
freeze_module("stat" "${CPython_SOURCE_DIR}/Lib/stat.py")
freeze_module("importlib.util" "${CPython_SOURCE_DIR}/Lib/importlib/util.py")
freeze_module("importlib.machinery" "${CPython_SOURCE_DIR}/Lib/importlib/machinery.py")
freeze_module("runpy" "${CPython_SOURCE_DIR}/Lib/runpy.py")
freeze_module("__hello__" "${CPython_SOURCE_DIR}/Lib/__hello__.py")
freeze_module("__phello__" "${CPython_SOURCE_DIR}/Lib/__phello__/__init__.py")
freeze_module("__phello__.ham" "${CPython_SOURCE_DIR}/Lib/__phello__/ham/__init__.py")
freeze_module("__phello__.ham.eggs" "${CPython_SOURCE_DIR}/Lib/__phello__/ham/eggs.py")
freeze_module("__phello__.spam" "${CPython_SOURCE_DIR}/Lib/__phello__/spam.py")
freeze_module("frozen_only" "${CPython_SOURCE_DIR}/Tools/freeze/flag.py")
freeze_module("getpath" "${CPython_SOURCE_DIR}/Modules/getpath.py")

find_package(Python3 REQUIRED COMPONENTS Interpreter)
add_custom_command(OUTPUT "${CMAKE_CURRENT_LIST_DIR}/deepfreeze/deepfreeze.c"
  COMMAND Python3::Interpreter "${CPython_SOURCE_DIR}/Tools/build/deepfreeze.py"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib._bootstrap.h:importlib._bootstrap"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib._bootstrap_external.h:importlib._bootstrap_external"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/zipimport.h:zipimport"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/abc.h:abc"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/codecs.h:codecs"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/io.h:io"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/_collections_abc.h:_collections_abc"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/_sitebuiltins.h:_sitebuiltins"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/genericpath.h:genericpath"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/ntpath.h:ntpath"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/posixpath.h:posixpath"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/os.h:os"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/site.h:site"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/stat.h:stat"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib.util.h:importlib.util"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib.machinery.h:importlib.machinery"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/runpy.h:runpy"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__hello__.h:__hello__"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.h:__phello__"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.ham.h:__phello__.ham"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.ham.eggs.h:__phello__.ham.eggs"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.spam.h:__phello__.spam"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/frozen_only.h:frozen_only"
  -o "${CMAKE_CURRENT_LIST_DIR}/deepfreeze/deepfreeze.c"
  DEPENDS
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib._bootstrap.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib._bootstrap_external.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/zipimport.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/abc.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/codecs.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/io.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/_collections_abc.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/_sitebuiltins.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/genericpath.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/ntpath.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/posixpath.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/os.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/site.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/stat.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib.util.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/importlib.machinery.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/runpy.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__hello__.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.ham.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.ham.eggs.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/__phello__.spam.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/frozen_only.h"
  "${CMAKE_CURRENT_LIST_DIR}/frozen_modules/getpath.h")

add_library(pythoncore SHARED)
py_set_output_name(pythoncore "python${PROJECT_VERSION_MAJOR}${PROJECT_VERSION_MINOR}")
target_link_libraries(pythoncore PRIVATE py_default_options)
target_include_directories(pythoncore PRIVATE
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13"
  "${CPython_SOURCE_DIR}/Modules/_hacl/include"
  "${CPython_SOURCE_DIR}/Modules/_hacl/internal"
  "${CPython_SOURCE_DIR}/Python")
target_compile_definitions(pythoncore PRIVATE
  _Py_HAVE_ZLIB
  _USRDLL
  Py_BUILD_CORE
  Py_BUILD_CORE_BUILTIN
  Py_ENABLE_SHARED
  "MS_DLL_ID=\"${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}\"")
target_compile_options(pythoncore PRIVATE /Zm200)

set_property(SOURCE "${CPython_SOURCE_DIR}/Modules/getpath.c" APPEND PROPERTY COMPILE_DEFINITIONS
  PREFIX=NULL
  EXEC_PREFIX=NULL
  VERSION=NULL
  [[VPATH="..\\.."]]
  [[PYDEBUGEXT="_d"]]
  [[PLATLIBDIR="DLLs"]])
set_property(SOURCE "${CPython_SOURCE_DIR}/Modules/binascii.c" APPEND PROPERTY COMPILE_DEFINITIONS USE_ZLIB_CRC32)

find_package(Git REQUIRED)
execute_process(COMMAND Git::Git name-rev --name-only HEAD WORKING_DIRECTORY "${CPython_SOURCE_DIR}" OUTPUT_VARIABLE GIT_BRANCH OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND Git::Git rev-parse --short HEAD WORKING_DIRECTORY "${CPython_SOURCE_DIR}" OUTPUT_VARIABLE GIT_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND Git::Git describe --all --always --dirty WORKING_DIRECTORY "${CPython_SOURCE_DIR}" OUTPUT_VARIABLE GIT_TAG OUTPUT_STRIP_TRAILING_WHITESPACE)

set_property(SOURCE "${CPython_SOURCE_DIR}/Modules/getbuildinfo.c" APPEND PROPERTY COMPILE_DEFINITIONS "GITVERSION=\"${GIT_VERSION}\"" "GITTAG=\"${GIT_TAG}\"" "GITBRANCH=\"${GIT_BRANCH}\"")
set_property(SOURCE "${CPython_SOURCE_DIR}/Python/sysmodule.c" APPEND PROPERTY COMPILE_DEFINITIONS [[VPATH="..\\.."]])
set_property(SOURCE "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/deflate.c" APPEND PROPERTY COMPILE_OPTIONS /wd4244)

target_sources(pythoncore PRIVATE
  "${CPython_SOURCE_DIR}/Modules/getpath.c"
  "${CPython_SOURCE_DIR}/Modules/_abc.c"
  "${CPython_SOURCE_DIR}/Modules/_bisectmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_blake2/blake2module.c"
  "${CPython_SOURCE_DIR}/Modules/_blake2/blake2b_impl.c"
  "${CPython_SOURCE_DIR}/Modules/_blake2/blake2s_impl.c"
  "${CPython_SOURCE_DIR}/Modules/_codecsmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_collectionsmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_contextvarsmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_csv.c"
  "${CPython_SOURCE_DIR}/Modules/_functoolsmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_hacl/Hacl_Hash_MD5.c"
  "${CPython_SOURCE_DIR}/Modules/_hacl/Hacl_Hash_SHA1.c"
  "${CPython_SOURCE_DIR}/Modules/_hacl/Hacl_Hash_SHA2.c"
  "${CPython_SOURCE_DIR}/Modules/_hacl/Hacl_Hash_SHA3.c"
  "${CPython_SOURCE_DIR}/Modules/_heapqmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_json.c"
  "${CPython_SOURCE_DIR}/Modules/_localemodule.c"
  "${CPython_SOURCE_DIR}/Modules/_lsprof.c"
  "${CPython_SOURCE_DIR}/Modules/_pickle.c"
  "${CPython_SOURCE_DIR}/Modules/_randommodule.c"
  "${CPython_SOURCE_DIR}/Modules/_sre/sre.c"
  "${CPython_SOURCE_DIR}/Modules/_stat.c"
  "${CPython_SOURCE_DIR}/Modules/_struct.c"
  "${CPython_SOURCE_DIR}/Modules/_weakref.c"
  "${CPython_SOURCE_DIR}/Modules/arraymodule.c"
  "${CPython_SOURCE_DIR}/Modules/atexitmodule.c"
  "${CPython_SOURCE_DIR}/Modules/binascii.c"
  "${CPython_SOURCE_DIR}/Modules/cmathmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_datetimemodule.c"
  "${CPython_SOURCE_DIR}/Modules/errnomodule.c"
  "${CPython_SOURCE_DIR}/Modules/faulthandler.c"
  "${CPython_SOURCE_DIR}/Modules/gcmodule.c"
  "${CPython_SOURCE_DIR}/Modules/getbuildinfo.c"
  "${CPython_SOURCE_DIR}/Modules/itertoolsmodule.c"
  "${CPython_SOURCE_DIR}/Modules/main.c"
  "${CPython_SOURCE_DIR}/Modules/mathmodule.c"
  "${CPython_SOURCE_DIR}/Modules/md5module.c"
  "${CPython_SOURCE_DIR}/Modules/mmapmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_opcode.c"
  "${CPython_SOURCE_DIR}/Modules/_operator.c"
  "${CPython_SOURCE_DIR}/Modules/posixmodule.c"
  "${CPython_SOURCE_DIR}/Modules/rotatingtree.c"
  "${CPython_SOURCE_DIR}/Modules/sha1module.c"
  "${CPython_SOURCE_DIR}/Modules/sha2module.c"
  "${CPython_SOURCE_DIR}/Modules/sha3module.c"
  "${CPython_SOURCE_DIR}/Modules/signalmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_statisticsmodule.c"
  "${CPython_SOURCE_DIR}/Modules/symtablemodule.c"
  "${CPython_SOURCE_DIR}/Modules/_threadmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_tracemalloc.c"
  "${CPython_SOURCE_DIR}/Modules/_typingmodule.c"
  "${CPython_SOURCE_DIR}/Modules/timemodule.c"
  "${CPython_SOURCE_DIR}/Modules/xxsubtype.c"
  "${CPython_SOURCE_DIR}/Modules/_xxsubinterpretersmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_xxinterpchannelsmodule.c"
  "${CPython_SOURCE_DIR}/Modules/_io/fileio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/bytesio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/stringio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/bufferedio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/iobase.c"
  "${CPython_SOURCE_DIR}/Modules/_io/textio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/winconsoleio.c"
  "${CPython_SOURCE_DIR}/Modules/_io/_iomodule.c"
  "${CPython_SOURCE_DIR}/Modules/cjkcodecs/_codecs_cn.c"
  "${CPython_SOURCE_DIR}/Modules/cjkcodecs/_codecs_hk.c"
  "${CPython_SOURCE_DIR}/Modules/cjkcodecs/_codecs_iso2022.c"
  "${CPython_SOURCE_DIR}/Modules/cjkcodecs/_codecs_jp.c"
  "${CPython_SOURCE_DIR}/Modules/cjkcodecs/_codecs_kr.c"
  "${CPython_SOURCE_DIR}/Modules/cjkcodecs/_codecs_tw.c"
  "${CPython_SOURCE_DIR}/Modules/cjkcodecs/multibytecodec.c"
  "${CPython_SOURCE_DIR}/Modules/_winapi.c"
  "${CPython_SOURCE_DIR}/Objects/abstract.c"
  "${CPython_SOURCE_DIR}/Objects/boolobject.c"
  "${CPython_SOURCE_DIR}/Objects/bytearrayobject.c"
  "${CPython_SOURCE_DIR}/Objects/bytes_methods.c"
  "${CPython_SOURCE_DIR}/Objects/bytesobject.c"
  "${CPython_SOURCE_DIR}/Objects/call.c"
  "${CPython_SOURCE_DIR}/Objects/capsule.c"
  "${CPython_SOURCE_DIR}/Objects/cellobject.c"
  "${CPython_SOURCE_DIR}/Objects/classobject.c"
  "${CPython_SOURCE_DIR}/Objects/codeobject.c"
  "${CPython_SOURCE_DIR}/Objects/complexobject.c"
  "${CPython_SOURCE_DIR}/Objects/descrobject.c"
  "${CPython_SOURCE_DIR}/Objects/dictobject.c"
  "${CPython_SOURCE_DIR}/Objects/enumobject.c"
  "${CPython_SOURCE_DIR}/Objects/exceptions.c"
  "${CPython_SOURCE_DIR}/Objects/fileobject.c"
  "${CPython_SOURCE_DIR}/Objects/floatobject.c"
  "${CPython_SOURCE_DIR}/Objects/frameobject.c"
  "${CPython_SOURCE_DIR}/Objects/funcobject.c"
  "${CPython_SOURCE_DIR}/Objects/genericaliasobject.c"
  "${CPython_SOURCE_DIR}/Objects/genobject.c"
  "${CPython_SOURCE_DIR}/Objects/interpreteridobject.c"
  "${CPython_SOURCE_DIR}/Objects/iterobject.c"
  "${CPython_SOURCE_DIR}/Objects/listobject.c"
  "${CPython_SOURCE_DIR}/Objects/longobject.c"
  "${CPython_SOURCE_DIR}/Objects/memoryobject.c"
  "${CPython_SOURCE_DIR}/Objects/methodobject.c"
  "${CPython_SOURCE_DIR}/Objects/moduleobject.c"
  "${CPython_SOURCE_DIR}/Objects/namespaceobject.c"
  "${CPython_SOURCE_DIR}/Objects/object.c"
  "${CPython_SOURCE_DIR}/Objects/obmalloc.c"
  "${CPython_SOURCE_DIR}/Objects/odictobject.c"
  "${CPython_SOURCE_DIR}/Objects/picklebufobject.c"
  "${CPython_SOURCE_DIR}/Objects/rangeobject.c"
  "${CPython_SOURCE_DIR}/Objects/setobject.c"
  "${CPython_SOURCE_DIR}/Objects/sliceobject.c"
  "${CPython_SOURCE_DIR}/Objects/structseq.c"
  "${CPython_SOURCE_DIR}/Objects/tupleobject.c"
  "${CPython_SOURCE_DIR}/Objects/typeobject.c"
  "${CPython_SOURCE_DIR}/Objects/typevarobject.c"
  "${CPython_SOURCE_DIR}/Objects/unicodectype.c"
  "${CPython_SOURCE_DIR}/Objects/unicodeobject.c"
  "${CPython_SOURCE_DIR}/Objects/unionobject.c"
  "${CPython_SOURCE_DIR}/Objects/weakrefobject.c"
  "${CPython_SOURCE_DIR}/Parser/myreadline.c"
  "${CPython_SOURCE_DIR}/Parser/tokenizer.c"
  "${CPython_SOURCE_DIR}/Parser/token.c"
  "${CPython_SOURCE_DIR}/Parser/pegen.c"
  "${CPython_SOURCE_DIR}/Parser/pegen_errors.c"
  "${CPython_SOURCE_DIR}/Parser/action_helpers.c"
  "${CPython_SOURCE_DIR}/Parser/parser.c"
  "${CPython_SOURCE_DIR}/Parser/string_parser.c"
  "${CPython_SOURCE_DIR}/Parser/peg_api.c"
  "${CPython_SOURCE_DIR}/PC/invalid_parameter_handler.c"
  "${CPython_SOURCE_DIR}/PC/winreg.c"
  "${CPython_SOURCE_DIR}/PC/config.c"
  "${CPython_SOURCE_DIR}/PC/msvcrtmodule.c"
  "${CPython_SOURCE_DIR}/Python/pyhash.c"
  "${CPython_SOURCE_DIR}/Python/_warnings.c"
  "${CPython_SOURCE_DIR}/Python/asdl.c"
  "${CPython_SOURCE_DIR}/Python/assemble.c"
  "${CPython_SOURCE_DIR}/Python/ast.c"
  "${CPython_SOURCE_DIR}/Python/ast_opt.c"
  "${CPython_SOURCE_DIR}/Python/ast_unparse.c"
  "${CPython_SOURCE_DIR}/Python/bltinmodule.c"
  "${CPython_SOURCE_DIR}/Python/bootstrap_hash.c"
  "${CPython_SOURCE_DIR}/Python/ceval.c"
  "${CPython_SOURCE_DIR}/Python/codecs.c"
  "${CPython_SOURCE_DIR}/Python/compile.c"
  "${CPython_SOURCE_DIR}/Python/context.c"
  "${CPython_SOURCE_DIR}/Python/dynamic_annotations.c"
  "${CPython_SOURCE_DIR}/Python/dynload_win.c"
  "${CPython_SOURCE_DIR}/Python/errors.c"
  "${CPython_SOURCE_DIR}/Python/fileutils.c"
  "${CPython_SOURCE_DIR}/Python/flowgraph.c"
  "${CPython_SOURCE_DIR}/Python/formatter_unicode.c"
  "${CPython_SOURCE_DIR}/Python/frame.c"
  "${CPython_SOURCE_DIR}/Python/frozen.c"
  "${CPython_SOURCE_DIR}/Python/future.c"
  "${CPython_SOURCE_DIR}/Python/getargs.c"
  "${CPython_SOURCE_DIR}/Python/getcompiler.c"
  "${CPython_SOURCE_DIR}/Python/getcopyright.c"
  "${CPython_SOURCE_DIR}/Python/getopt.c"
  "${CPython_SOURCE_DIR}/Python/getplatform.c"
  "${CPython_SOURCE_DIR}/Python/getversion.c"
  "${CPython_SOURCE_DIR}/Python/ceval_gil.c"
  "${CPython_SOURCE_DIR}/Python/hamt.c"
  "${CPython_SOURCE_DIR}/Python/hashtable.c"
  "${CPython_SOURCE_DIR}/Python/import.c"
  "${CPython_SOURCE_DIR}/Python/importdl.c"
  "${CPython_SOURCE_DIR}/Python/initconfig.c"
  "${CPython_SOURCE_DIR}/Python/intrinsics.c"
  "${CPython_SOURCE_DIR}/Python/instrumentation.c"
  "${CPython_SOURCE_DIR}/Python/legacy_tracing.c"
  "${CPython_SOURCE_DIR}/Python/marshal.c"
  "${CPython_SOURCE_DIR}/Python/modsupport.c"
  "${CPython_SOURCE_DIR}/Python/mysnprintf.c"
  "${CPython_SOURCE_DIR}/Python/mystrtoul.c"
  "${CPython_SOURCE_DIR}/Python/optimizer.c"
  "${CPython_SOURCE_DIR}/Python/pathconfig.c"
  "${CPython_SOURCE_DIR}/Python/perf_trampoline.c"
  "${CPython_SOURCE_DIR}/Python/preconfig.c"
  "${CPython_SOURCE_DIR}/Python/pyarena.c"
  "${CPython_SOURCE_DIR}/Python/pyctype.c"
  "${CPython_SOURCE_DIR}/Python/pyfpe.c"
  "${CPython_SOURCE_DIR}/Python/pylifecycle.c"
  "${CPython_SOURCE_DIR}/Python/pymath.c"
  "${CPython_SOURCE_DIR}/Python/pytime.c"
  "${CPython_SOURCE_DIR}/Python/pystate.c"
  "${CPython_SOURCE_DIR}/Python/pystrcmp.c"
  "${CPython_SOURCE_DIR}/Python/pystrhex.c"
  "${CPython_SOURCE_DIR}/Python/pystrtod.c"
  "${CPython_SOURCE_DIR}/Python/dtoa.c"
  "${CPython_SOURCE_DIR}/Python/Python-ast.c"
  "${CPython_SOURCE_DIR}/Python/Python-tokenize.c"
  "${CPython_SOURCE_DIR}/Python/pythonrun.c"
  "${CPython_SOURCE_DIR}/Python/specialize.c"
  "${CPython_SOURCE_DIR}/Python/suggestions.c"
  "${CPython_SOURCE_DIR}/Python/structmember.c"
  "${CPython_SOURCE_DIR}/Python/symtable.c"
  "${CPython_SOURCE_DIR}/Python/sysmodule.c"
  "${CPython_SOURCE_DIR}/Python/thread.c"
  "${CPython_SOURCE_DIR}/Python/traceback.c"
  "${CPython_SOURCE_DIR}/Python/tracemalloc.c"
  "${CPython_SOURCE_DIR}/Python/deepfreeze/deepfreeze.c"
  "${CPython_SOURCE_DIR}/Modules/zlibmodule.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/adler32.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/compress.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/crc32.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/deflate.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/infback.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/inffast.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/inflate.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/inftrees.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/trees.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/uncompr.c"
  "${CPython_SOURCE_DIR}/externals/zlib-1.2.13/zutil.c")

if(WIN32)
  target_sources(pythoncore PRIVATE "${CPython_SOURCE_DIR}/PC/dl_nt.c")
endif()
